--- a/view/profile/index/index.phtml
+++ b/view/profile/index/index.phtml
@@ -1,4 +1,5 @@
 <?php $this->headTitle()->prepend($this->translate('My Profile')); ?>
+<?php $this->inlineScript()->appendFile($this->basePath() . '/js/ckeditor.js'); ?>
 <?php
     $profile = $this->profile;
     $form = $this->form;
