--- a/view/partial/header.phtml
+++ b/view/partial/header.phtml
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse">
         <?php echo $this->navigation('navigation')
                 ->menu()
-                ->setPartial('application/partial/menu.phtml')
+                ->setPartial('main/partial/menu.phtml')
                 ->setUlClass('nav navbar-nav navbar-nav-left')
                 ->render();
          ?>
