--- a/view/partial/header.phtml
+++ b/view/partial/header.phtml
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/"><img width="110" height="36" src="<?php echo $this->basePath('/img/logo.png') ?>" alt="<?php echo $this->settings('metatitle') ?>"/>&nbsp;<?php echo $this->settings('name') ?></a>
+        <a class="navbar-brand" href="/"><?php echo $this->settings('name') ?></a>
     </div>
     <div class="collapse navbar-collapse">
         <?php echo $this->navigation('navigation')
